<resources>
    <string name="app_name">20SecondChattingApplication</string>
    //Splash screen Activity
    <string name="username">Enter Email</string>
    <string name="password"> Enter User Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_user">If You are a new User?</string>
    <string name="forgot_password">Forgot Password</string>
    //Register Activity
    <string name="username_reg">Enter Email</string>
    <string name="password_reg">Enter Password</string>
    <string name="sex_reg">Sex</string>
    <string name="address_reg">Address</string>
</resources>
