<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".RegisterActivity">
    <EditText
        android:id="@+id/username_reg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_reg"
        android:layout_centerInParent="true"
        android:inputType="text"
       />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_reg"
        android:layout_below="@id/username_reg"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/sex_reg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/sex_reg"
        android:layout_below="@id/password_reg"
        android:layout_centerInParent="true"
        android:inputType="text"
         />
    <EditText
        android:id="@+id/address_reg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/address_reg"
        android:layout_below="@id/sex_reg"
        android:layout_centerInParent="true"
        android:inputType="text"
        />
    <Button
        android:id="@+id/register_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_reg"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"/>


</RelativeLayout>